openshift/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __az-name__
spec:
  replicas: 2
  selector:
    matchLabels:
      app: __az-name__
  template:
    metadata:
      labels:
        app: __az-name__
    spec:
      containers:
        - name: __az-name__
          image: __az-image__:__az-tag__
          ports:
            - containerPort: __az-port__
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
