openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $AZ-NAME
spec:
  selector:
    app: $AZ-NAME
  ports:
    - nodePort: 0
      port: 80
      protocol: TCP
      targetPort: $AZ-PORT
